# Minecraft-Mod-Updater

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: config.rs  curseforge.rs  download.rs  lib.rs  main.rs  mc_version.rs  modrinth.rs  resolve.rs  scan.rs  verify.rs
src/tui/: mod.rs  theme.rs
